# dconf-fancy-load

./: README.md  pyproject.toml  test
.github/workflows/: test.yaml
dconf_fancy_load/: config.py  config_test.py  load.py  load_test.py  main.py  main_test.py
